WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278441
`background-clip: border-area` should do nothing on the root
https://bugs.webkit.org/show_bug.cgi?id=278441
Summary
`background-clip: border-area` should do nothing on the root
Simon Fraser (smfr)
Reported
2024-08-20 20:25:06 PDT
Per
https://drafts.csswg.org/css-backgrounds-3/#background-clip
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-20 20:25:34 PDT
<
rdar://problem/134389029
>
Simon Fraser (smfr)
Comment 2
2024-09-07 09:00:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33255
EWS
Comment 3
2024-09-11 08:28:52 PDT
Committed
283482@main
(21c075d2c09a): <
https://commits.webkit.org/283482@main
> Reviewed commits have been landed. Closing PR #33255 and removing active labels.
EWS
Comment 4
2024-09-12 20:54:48 PDT
Committed
283286.28@safari-7620-branch
(74cf8d885699): <
https://commits.webkit.org/283286.28@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1757 and removing active labels.
Tim Nguyen (:ntim)
Comment 5
2025-01-03 06:53:26 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49898
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug