`background-clip: border-area` should do nothing on the root rdar://134389029 https://bugs.webkit.org/show_bug.cgi?id=278441

Reviewed by Alan Baradlay.

Implement the part of https://www.w3.org/TR/css-backgrounds-3/#background-clip that says that `background-clip` does nothing
on the root by setting the override clip value in `BackgroundPainter` when it's created with the root renderer.

Previously, `background-clip: border-area` on the root could leave us with unpainted areas.

Add WPT testing `background-clip: text` and `background-clip: border-area` for backgrounds on or propagated to the root.

* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-border-area-on-body-not-propagated-to-root-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-border-area-on-body-not-propagated-to-root.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-border-area-on-body-propagated-to-root-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-border-area-on-body-propagated-to-root.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-border-area-on-root-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-border-area-on-root.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-body-not-propagated-to-root-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-body-not-propagated-to-root-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-body-not-propagated-to-root.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-body-propagated-to-root-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-body-propagated-to-root.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-root-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-on-root.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/reference/green-root-background.html: Added.
* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::BackgroundPainter):

Canonical link: https://commits.webkit.org/283482@main